--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <table>
             <tr>
-                <img style="display: none" src="" id="start-image">
+                <img style="display: none" src='' id="start-image">
                 <td>
                     <canvas id="memegenerator"></canvas>
                     <!--<div class="fb-share-button" data-href="http://meme-nto.comeze.com" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="meme-nto.comeze.com">Share</a></div>-->
