--- a/rwm/canvas.html
+++ b/rwm/canvas.html
@@ -5,7 +5,8 @@
     </head>
     <body style='background:black'>
         <canvas id="memegenerator"></canvas>
-        <input id="custom-text" class='items' type="text" value="" placeholder='enter text'/>
+        <input id="custom-text1" class='custom-text items' type="text" value="" placeholder='enter text'/>
+         <input id="custom-text2" class='custom-text items' type="text" value="" placeholder='enter text'/>
         <a class='items' id="img-download" download="mobiforge-canvas.png">Download image</a>
         <input id="fileInput" type="file" class='items' />
         <div class="button upload" id="uploadButton" onclick="openFile()">
@@ -14,7 +15,7 @@
         <div class="hidden_elem">
 
             <span  style="font-family: 'theme', cursive;">&nbsp;</span>
-            <img src="images/logo-frame-2x.png" style='opacity:0; height:250px; width:250px'id="overlay-image">
+            <img src="images/logo-frame.png" style='opacity:0; height:450px; width:250px'id="overlay-image">
             <img style="display: none" src="" id="start-image">
         </div>
 
@@ -45,7 +46,7 @@
                 $('#fileInput').click();
             }
 
-            $("#custom-text").keyup(function() {
+            $(".custom-text").keyup(function() {
                 var dInput = $(this).val();
                 doTransform();
                 //$(".dDimension:contains('" + dInput + "')").css("display","block");
@@ -113,22 +114,22 @@
                 ctx.font = '90px theme';
                 ctx.strokeStyle = 'red';
                 ctx.fillStyle = 'red';
-                ctx.drawImage(ontopImg,360,200,ontopImg.width,ontopImg.height);
 
             }
 
             function doTransform() {
-
-                text = document.getElementById('custom-text').value;
-                text = text.toUpperCase();/*
+                var text1 = document.getElementById('custom-text1').value;
+                var text2 = document.getElementById('custom-text2').value
+                text1 = text1.toUpperCase();
+                 text2 = text2.toUpperCase();/*
                 wrapText(ctx, text, 570, 600, canvasWidth-canvasWidth/3, 100);*/
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 x = canvas.width/2 - img.width/2;
                 y = canvas.height/2 - img.height/2;
                 ctx.drawImage(img,x,y);
-
-                ctx.drawImage(ontopImg,360,200,ontopImg.width,ontopImg.height);
-                ctx.fillText(text,480,445);
+                ctx.drawImage(ontopImg,360,50,ontopImg.width,ontopImg.height);
+                ctx.fillText(text1,480,325);//1st input
+                ctx.fillText(text2,480,415);//1st input
             }
             function prepareDownload() {
                 var data = canvas.toDataURL();
